appId: com.lanonna.lanonna
---
- tapOn:
    id: auth_login_email
- eraseText
- inputText: ${SIGN_IN_EMAIL}
- tapOn:
    id: auth_login_password
- eraseText
- inputText: ${SIGN_IN_PASSWORD}
- hideKeyboard
- tapOn:
    id: auth_sign_in
